aprendendo estrutura basica de css externo

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,3 +12,28 @@
     - Atributo
     - Pseudo-classe
     - Pseudo-elemento
+*/
+
+h1 {
+    color: #318021;
+}
+
+/* Class */
+.link {
+    color: #318021;
+}
+
+ul .link {
+    color: #e8240e;
+    /* border: 2px solid #e8240e; */
+    display: inline;
+    margin: 0 3%;
+   
+
+    /* Nesting links */
+    a{
+        text-decoration: none;
+        color: #e8240e;
+    }
+
+}
