--- a/css/estilo.css
+++ b/css/estilo.css
@@ -37,3 +37,16 @@ ul .link {
     }
 
 }
+
+#menu ul{
+    text-align: center;
+    letter-spacing: 2px;
+}
+
+/* ID */
+#container {
+    width: 80%;
+    height: 100%;
+    border: 2px solid #000;
+    margin: 0 auto;
+}
